--- a/exemplo1/package.json
+++ b/exemplo1/package.json
@@ -9,6 +9,7 @@
   "author": "cdp",
   "license": "ISC",
   "dependencies": {
+    "consign": "^0.1.5",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "pg": "^6.2.4"
